# cockpit

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
config/: modules.yaml
docs/: conceptos-generales.md  crear-modulo.md  ejemplo-modulo-ficticio-ia.md  instrucciones-ia-paquetes.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  terminal.rs
src/app/: AppShell.tsx  base.css  shellCommands.ts  zoomController.ts
src/app/layout/: ConsoleHost.tsx  FooterHost.tsx  GlobalDialogHost.tsx  KeybindingHost.tsx  ModalHost.tsx  TopToolbar.tsx  ZoomHost.tsx
src/core/bootstrap/: bootstrapApp.ts  packageCatalog.ts  (+2 more)
src/dispatcher/: DispatchRouter.ts
src/test/: appShell.test.tsx  cameraVisionService.test.ts  dispatchRouter.test.ts  googleMapsLoader.test.ts  integration.test.ts  mapEngine.test.ts  mapProtractor.test.ts  mapWorkspaceConsumption.test.tsx  metricsService.test.ts  nav2Protocol.test.ts  navigationEventFormatting.test.ts  normalizeKey.test.ts  packageCatalog.test.ts  packageConfigLoader.test.ts  processesAnsi.test.ts  processesModal.test.tsx  processesService.test.ts  registries.test.ts  rosboardWorkspace.test.tsx  services.test.ts  settingsModal.test.tsx  sidebarHost.test.tsx  systemNotificationService.test.ts  telemetrySidebar.test.tsx  terminalBridge.test.ts  terminalService.test.ts  transports.test.ts  zoomController.test.ts
(+48 files in other folders)
