[package]
name = "cockpit"
version = "0.2.0"
description = "Cockpit Desktop — Modular robotics tooling"
authors = []
edition = "2021"

[lib]
name = "cockpit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
